WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140758
Fix build warning in WebKit2/UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=140758
Summary
Fix build warning in WebKit2/UIProcess module
Shivakumar J M
Reported
2015-01-21 20:56:06 PST
Fix build warning got in latest version bild, might be caused by:/bugs.webkit.org/show_bug.cgi?id=140728 [4197/4854] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/API/C/WKOriginDataManager.cpp.o ../../Source/WebKit2/UIProcess/API/C/WKPageGroup.cpp:81:6: warning: unused parameter ‘pageGroupRef’ [-Wunused-parameter] void WKPageGroupAddUserContentFilter(WKPageGroupRef pageGroupRef, WKUserContentFilterRef userContentFilterRef) ^ ../../Source/WebKit2/UIProcess/API/C/WKPageGroup.cpp:81:6: warning: unused parameter ‘userContentFilterRef’ [-Wunused-parameter] ../../Source/WebKit2/UIProcess/API/C/WKPageGroup.cpp:88:6: warning: unused parameter ‘pageGroupRef’ [-Wunused-parameter] void WKPageGroupRemoveAllUserContentFilters(WKPageGroupRef pageGroupRef)
Attachments
Patch
(1.43 KB, patch)
2015-01-21 21:04 PST
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2015-01-21 21:04:37 PST
Created
attachment 245116
[details]
Patch Fix build warnings by using UNUSED_PARAM macro
Csaba Osztrogonác
Comment 2
2015-01-22 02:21:46 PST
Comment on
attachment 245116
[details]
Patch Clearing flags on attachment: 245116 Committed
r178910
: <
http://trac.webkit.org/changeset/178910
>
Csaba Osztrogonác
Comment 3
2015-01-22 02:21:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug