Fix build warning in WebKit2/UIProcess module https://bugs.webkit.org/show_bug.cgi?id=140758

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2015-01-22
Reviewed by Csaba Osztrogonác.

Fix build warnings by using UNUSED_PARAM macro

* UIProcess/API/C/WKPageGroup.cpp:
(WKPageGroupAddUserContentFilter):
(WKPageGroupRemoveAllUserContentFilters):

Canonical link: https://commits.webkit.org/158750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178910 268f45cc-cd09-0410-ab3c-d52691b4dbfc